[gd_scene load_steps=4 format=2]

[ext_resource path="res://monsters/monster.gd" type="Script" id=1]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [  ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 457.751

[node name="Monster" type="AnimatedSprite"]
frames = SubResource( 1 )
animation = "die"
playing = true
script = ExtResource( 1 )

[node name="Modifiers" type="Node2D" parent="."]

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="Skills" type="Node2D" parent="."]

[node name="ActionTimer" type="Timer" parent="."]

[node name="Effects" type="Node2D" parent="."]

[connection signal="animation_finished" from="." to="." method="_on_Monster_animation_finished"]
[connection signal="input_event" from="Hitbox" to="." method="_on_Hitbox_input_event"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_ActionTimer_timeout"]
